force-app/main/default/objects/Agent_Presence_Event__e/Agent_Presence_Event__e.object-meta.xml
<CustomObject>
    <description>Created for publishing User Service Presence Events</description>
    <label>Agent Presence Event</label>
    <pluralLabel>Agent Presence Events</pluralLabel>
</CustomObject>