force-app/main/default/objects/Agent_Presence_Event__e/fields/ChangeEventHeader__c.field-meta.xml
<CustomField>
    <fullName>ChangeEventHeader__c</fullName>
    <label>ChangeEventHeader</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>