force-app/main/default/objects/Agent_Presence_Event__e/fields/IdleDuration__c.field-meta.xml
<CustomField>
    <fullName>IdleDuration__c</fullName>
    <label>IdleDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>