force-app/main/default/objects/Agent_Presence_Event__e/fields/IsAway__c.field-meta.xml
<CustomField>
    <fullName>IsAway__c</fullName>
    <label>IsAway</label>
    <length>18</length>
    <type>Text</type>
</CustomField>