force-app/main/default/objects/Agent_Presence_Event__e/fields/IsCurrentState__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentState__c</fullName>
    <label>IsCurrentState</label>
    <length>10</length>
    <type>Text</type>
</CustomField>