force-app/main/default/objects/Agent_Presence_Event__e/fields/ServicePresenceStatusId__c.field-meta.xml
<CustomField>
    <fullName>ServicePresenceStatusId__c</fullName>
    <label>ServicePresenceStatusId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>