force-app/main/default/objects/Agent_Presence_Event__e/fields/StatusEndDate__c.field-meta.xml
<CustomField>
    <fullName>StatusEndDate__c</fullName>
    <label>StatusEndDate</label>
    <type>DateTime</type>
</CustomField>