force-app/main/default/objects/Agent_Presence_Event__e/fields/StatusStartDate__c.field-meta.xml
<CustomField>
    <fullName>StatusStartDate__c</fullName>
    <label>StatusStartDate</label>
    <type>DateTime</type>
</CustomField>